--- a/src/components/section/section.module.css
+++ b/src/components/section/section.module.css
@@ -1,6 +1,13 @@
 .section {
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
+}
+
+.section .content {
+  position: absolute;
+  z-index: 1;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .background {
@@ -9,6 +16,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  z-index: 0;
 }
 
 .background > img {
