add floral2 animation

--- a/src/app/(floral)/(floral-1)/floral-1-preview/assets/floral-2/style.module.css
+++ b/src/app/(floral)/(floral-1)/floral-1-preview/assets/floral-2/style.module.css
@@ -10,24 +10,18 @@
 }
 
 .floral_1 {
-  right: 0;
-  bottom: 0;
+  left: -30px;
+  top: -30px;
   z-index: 1;
-  animation: show 1s ease-in forwards, spin 4s ease 1s infinite alternate;
+  animation: show 1s ease-in forwards, spin 4s ease 0s infinite alternate;
+  transform-origin: top left;
 }
 
 .floral_2 {
-  right: -60px;
-  bottom: 20px;
+  left: -50px;
+  top: -40px;
   animation: show 2s ease-in 0s forwards, wave 3s ease 0s infinite alternate;
-  transform-origin: bottom center;
-}
-
-.floral_3 {
-  right: 40px;
-  bottom: -50px;
-  animation: show 2s ease-in 0s forwards, wave 4s ease-in 0s infinite alternate;
-  transform-origin: right center;
+  transform-origin: top left;
 }
 
 @keyframes show {
@@ -46,11 +40,11 @@
 
 @keyframes spin {
   from {
-    transform: rotate(0deg);
+    transform: rotate(-5deg);
   }
 
   to {
-    transform: rotate(30deg);
+    transform: rotate(5deg);
   }
 }
 
