--- a/src/app/(floral)/(floral-1)/floral-1-preview/style.module.css
+++ b/src/app/(floral)/(floral-1)/floral-1-preview/style.module.css
@@ -1,15 +1,29 @@
 .box {
   border: 2px solid #fff;
   border-radius: 0 20px 0 20px;
-  padding: 20px;
+  padding: 40px 20px;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  width: 500px;
+  height: 700px;
+  backdrop-filter: blur(5px);
+}
+
+.box .content {
+  position: relative;
+  z-index: 2;
 }
 
 .floral_1 {
   position: absolute;
   bottom: -20px;
   right: -20px;
+}
+
+.floral_2 {
+  position: absolute;
+  top: -20px;
+  left: -20px;
 }
