--- a/src/app/(floral)/(floral-1)/floral-1-preview/style.module.css
+++ b/src/app/(floral)/(floral-1)/floral-1-preview/style.module.css
@@ -1,19 +1,18 @@
 .box {
   border: 2px solid #fff;
   border-radius: 0 20px 0 20px;
-  padding: 40px 20px;
+  padding: 100px 50px;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
-  height: 700px;
   backdrop-filter: blur(5px);
 }
 
 .box .content {
   position: relative;
   z-index: 2;
+  text-align: center;
 }
 
 .floral_1 {
