add custom font

--- a/src/app/(floral)/(floral-1)/floral-1-preview/assets/floral-2/style.module.css
+++ b/src/app/(floral)/(floral-1)/floral-1-preview/assets/floral-2/style.module.css
@@ -13,9 +13,11 @@
   left: -30px;
   top: -30px;
   z-index: 1;
+  transform-origin: top left;
 }
 
 .floral_2 {
   left: -50px;
   top: -40px;
+  transform-origin: top left;
 }
