--- a/src/app/(floral)/(floral-1)/floral-1-preview/style.module.css
+++ b/src/app/(floral)/(floral-1)/floral-1-preview/style.module.css
@@ -1,18 +1,18 @@
 .box {
   border: 2px solid #fff;
   border-radius: 0 20px 0 20px;
-  padding: 100px 50px;
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  backdrop-filter: blur(5px);
+  width: 300px;
 }
 
 .box .content {
   position: relative;
   z-index: 2;
   text-align: center;
+  padding: 80px 20px;
 }
 
 .floral_1 {
