--- a/src/components/section/section.module.css
+++ b/src/components/section/section.module.css
@@ -8,6 +8,7 @@
   z-index: 1;
   min-height: 100%;
   min-width: 100%;
+  overflow-x: hidden;
 }
 
 .background {
@@ -17,6 +18,7 @@
   width: 100%;
   height: 100%;
   z-index: 0;
+  background-color: goldenrod;
 }
 
 .background > img {
@@ -24,4 +26,5 @@
   height: 100%;
   object-fit: cover;
   object-position: 100% 50%;
+  filter: blur(8px);
 }
