--- a/src/app/birthday/(dino)/(dino-1)/chairi/style.module.css
+++ b/src/app/birthday/(dino)/(dino-1)/chairi/style.module.css
@@ -2,8 +2,55 @@
   padding: 40px 20px;
 }
 
+.box h3 {
+  color: #fff;
+  text-align: center;
+  margin: 20px 0px;
+  font-size: 62px;
+  letter-spacing: 2px;
+  line-height: 100%;
+  transform: rotate(-5deg);
+}
+
+.box h4 {
+  color: #fff;
+  text-align: center;
+  margin: 20px 0px;
+  font-size: 16px;
+}
+
 .title {
   text-align: center;
-  font-size: 24px;
-  color: #88bd87;
+  font-size: 18px;
+  color: #fff;
+  letter-spacing: 3px;
+  margin-bottom: 18px;
+}
+
+.image {
+  position: relative;
+}
+
+.image img {
+  display: block;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  margin: auto;
+  border-radius: 50%;
+}
+
+.button {
+  border: none;
+  padding: 16px 28px;
+  background-color: #fff;
+  color: #77DD77;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 100%;
+  border-radius: 5px;
+  box-shadow: 4px 4px 0px #3e943e;
+  cursor: pointer;
+  display: block;
+  margin: auto;
 }
