--- a/src/components/fullscreen-loading/spinner.module.css
+++ b/src/components/fullscreen-loading/spinner.module.css
@@ -1,29 +1,54 @@
+/* HTML: <div class="loader"></div> */
 .loader {
   width: 40px;
-  aspect-ratio: 1;
-  color:#dc1818;
+  height: 20px;
+  --c:no-repeat radial-gradient(farthest-side,#3469cd 93%,#3469cd);
   background:
-   radial-gradient(circle at 60% 65%, currentColor 62%, #0000 65%) top left,
-   radial-gradient(circle at 40% 65%, currentColor 62%, #0000 65%) top right,
-   linear-gradient(to bottom left, currentColor 42%,#0000 43%) bottom left ,
-   linear-gradient(to bottom right,currentColor 42%,#0000 43%) bottom right;
-  background-size: 50% 50%;
-  background-repeat: no-repeat;
+    var(--c) 0    0,
+    var(--c) 50%  0;
+  background-size: 8px 8px;
   position: relative;
+  clip-path: inset(-200% -100% 0 0);
+  animation: l6-0 1.5s linear infinite;
 }
-
+.loader:before {
+  content: "";
+  position: absolute;
+  width: 8px;
+  height: 12px;
+  background: #3469cd;
+  left: -16px;
+  top: 0;
+  animation: 
+    l6-1 1.5s linear infinite,
+    l6-2 0.5s cubic-bezier(0,200,.8,200) infinite;
+}
 .loader:after {
   content: "";
   position: absolute;
-  inset: 0;
-  background: inherit;
-  opacity: 0.8;
-  animation: l2 1.5s infinite linear;
+  inset: 0 0 auto auto;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: #3469cd; 
+  animation: l6-3 1.5s linear infinite;
 }
-
-@keyframes l2 {
-  to {
-    transform: scale(2);
-    opacity: 0;
-  }
+@keyframes l6-0 {
+  0%,30%  {background-position: 0  0   ,50% 0   }
+  33%     {background-position: 0  100%,50% 0   }
+  41%,63% {background-position: 0  0   ,50% 0   }
+  66%     {background-position: 0  0   ,50% 100%}
+  74%,100%{background-position: 0  0   ,50% 0   }
+}
+@keyframes l6-1 {
+  90%  {transform:translateY(0)}
+  95%  {transform:translateY(15px)}
+  100% {transform:translateY(15px);left:calc(100% - 8px)}
+}
+@keyframes l6-2 {
+  100% {top:-0.1px}
+}
+@keyframes l6-3 {
+  0%,80%,100% {transform:translate(0)}
+  90%         {transform:translate(26px)}
 }
