add styling for page 4

--- a/src/app/birthday/(dino)/(dino-1)/chairi/style.module.css
+++ b/src/app/birthday/(dino)/(dino-1)/chairi/style.module.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 
-.cover, .page1, .page2 {
+.cover, .page1, .page2, .page3, .page4 {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -222,4 +222,74 @@
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.page3 h1 {
+  text-align: center;
+  color: #647440;
+  margin-bottom: 20px;
+}
+
+.page3 form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.page3 form > div{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.page3 form > div label {
+  font-size: 16px;
+}
+
+.page3 form input {
+  padding: 10px;
+  border: 2px solid #647440;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.page3 form input::placeholder {
+  color: #d8d8d8;
+}
+
+.page3 form button {
+  border: none;
+  padding: 12px 18px;
+  background-color: #9fb966;
+  color: #fff;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 100%;
+  border-radius: 5px;
+  box-shadow: 4px 4px 0px #647440;
+  cursor: pointer;
+  display: block;
+  border: 2px solid #fff;
+}
+
+.page4 {
+  text-align: center;
+}
+
+.page4 h1 {
+  color: #fff;
+  margin-bottom: 20px;
+  font-weight: normal;
+  font-size: 18px;
+}
+
+.page4 h2 {
+  font-weight: normal;
+  font-size: 18px;
+  color: #fff;
+}
+
+.page4 h3 {
+  font-size: 28px;
+  font-weight: bold;
+  color: #fff;
 }
