--- a/src/app/birthday/(dino)/(dino-1)/chairi/style.module.css
+++ b/src/app/birthday/(dino)/(dino-1)/chairi/style.module.css
@@ -252,6 +252,13 @@
   font-size: 16px;
 }
 
+.page3 form select {
+  padding: 10px;
+  border: 2px solid #647440;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
 .page3 form input::placeholder {
   color: #d8d8d8;
 }
@@ -269,6 +276,10 @@
   cursor: pointer;
   display: block;
   border: 2px solid #fff;
+}
+
+.page3 form button:disabled {
+  opacity: 0.3;
 }
 
 .page4 {
@@ -292,4 +303,77 @@
   font-size: 28px;
   font-weight: bold;
   color: #fff;
+}
+
+
+/* custom radio */
+/* The container */
+.radio_container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  color: #647440;
+  font-weight: bold;
+}
+
+/* Hide the browser's default radio button */
+.radio_container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.radio_checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.radio_container:hover input ~ .radio_checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.radio_container input:checked ~ .radio_checkmark {
+  background-color: #9fb966;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.radio_checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.radio_container input:checked ~ .radio_checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.radio_container .radio_checkmark:after {
+ 	top: 9px;
+	left: 9px;
+	width: 8px;
+	height: 8px;
+	border-radius: 50%;
+	background: white;
+}
+
+.input_error {
+  color: #e84848;
+  font-size: 14px;
 }
