--- a/src/app/wedding/(floral)/(floral-1)/floral-1-preview/style.module.css
+++ b/src/app/wedding/(floral)/(floral-1)/floral-1-preview/style.module.css
@@ -32,6 +32,8 @@
   padding: 12px 20px;
   margin: auto;
   display: block;
+  font-size: 12px;
+  letter-spacing: 2px;
 }
 
 .cover .name_container {
@@ -73,4 +75,83 @@
 .cover .name h2 {
   right: 5px;
   bottom: 60px;
+}
+
+.page1 {
+  background-color: #F8F3EA;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.page1 .image1, .page1 .image2 {
+  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.page1 .image1 {
+  top: -150px;
+  width: 80px;
+}
+
+.page1 .image2 {
+  bottom: -80px;
+  width: 100px;
+}
+
+.page1 h1 {
+  font-size: 14px;
+  line-height: 200%;
+  font-weight: normal;
+  text-align: center;
+}
+
+.page1 h2 {
+  font-size: 36px;
+  line-height: 100%;
+  font-weight: normal;
+  text-align: center;
+  color: #BC8A2E;
+}
+
+.page1 h3 {
+  font-size: 20px;
+  line-height: 100%;
+  font-weight: normal;
+  text-align: center;
+  margin: 20px 0;
+  color: #BC8A2E;
+}
+
+.page1 .name {
+  margin: 32px 0;
+}
+
+.countdown {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 12px;
+}
+
+.countdown > div {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #000;
+  padding: 18px 8px;
+}
+
+.countdown > div span:first-child {
+  font-size: 24px;
+  text-align: center;
+}
+
+.countdown > div span:nth-child(2) {
+  font-size: 8px;
+  text-align: center;
 }
