--- a/src/app/wedding/(floral)/(floral-1)/floral-1-preview/style.module.css
+++ b/src/app/wedding/(floral)/(floral-1)/floral-1-preview/style.module.css
@@ -1,4 +1,4 @@
-.cover, .page2 {
+.cover, .page2, .page4 {
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -80,32 +80,35 @@
   bottom: 60px;
 }
 
-.page1 {
+.page1, .page3 {
   background-color: #F8F3EA;
   position: relative;
   overflow: hidden;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
-.page1 .image1, .page1 .image2 {
+.page1 .image1, .page1 .image2, .page3 .image1, .page3 .image2 {
   display: block;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
 }
 
-.page1 .image1 {
+.page1 .image1, .page3 .image1 {
   top: -150px;
   width: 80px;
 }
 
-.page1 .image2 {
+.page1 .image2, .page3 .image2 {
   bottom: -80px;
   width: 100px;
+}
+
+.page1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .page1 h1 {
@@ -213,4 +216,39 @@
   text-align: center;
   font-size: 16px;
   font-weight: normal;
+}
+
+.page4 {
+  display: flex;
+  align-items: center;
+  padding: 42px;
+}
+
+.page4 > div{
+  text-align: center;
+  width: 100%;
+}
+
+.page4 h1 {
+  color: #fff;
+  line-height: 110%;
+  font-weight: normal;
+  font-size: 22px;
+  margin-bottom: 72px;
+}
+
+.page4 h2 {
+  color: #fff;
+  line-height: 110%;
+  font-weight: normal;
+  font-size: 18px;
+  margin-bottom: 12px;
+}
+
+.page4 h3 {
+  color: #F7C362;
+  line-height: 110%;
+  font-weight: normal;
+  font-size: 32px;
+  margin-bottom: 12px;
 }
