--- a/src/app/wedding/(floral)/(floral-1)/floral-1-preview/style.module.css
+++ b/src/app/wedding/(floral)/(floral-1)/floral-1-preview/style.module.css
@@ -1,4 +1,4 @@
-.cover, .page2, .page4 {
+.cover, .page2, .page3, .page4 {
   width: 100%;
   background-size: cover;
   background-position: center;
@@ -216,11 +216,6 @@
   text-align: center;
   font-size: 16px;
   font-weight: normal;
-}
-
-.page3 {
-  display: flex;
-  align-items: center;
 }
 
 .page4 {
