--- a/src/app/wedding/(floral)/(floral-2)/floral-2-preview/style.module.css
+++ b/src/app/wedding/(floral)/(floral-2)/floral-2-preview/style.module.css
@@ -141,39 +141,39 @@
   color: #fff;
 }
 
-.content h1 {
+.cover .content h1 {
   font-weight: normal;
   font-size: 14px;
   letter-spacing: 2px;
   margin-bottom: 30px;
 }
 
-.content h2 {
+.cover .content h2 {
   font-weight: normal;
   font-size: 48px;
   line-height: 100%;
 }
 
-.content h3 {
+.cover .content h3 {
   line-height: 100%;
   font-size: 32px;
   margin: 20px 0;
 }
 
-.content h4 {
+.cover .content h4 {
   margin-top: 60px;
   font-weight: normal;
   font-size: 14px;
 }
 
-.content h5 {
+.cover .content h5 {
   margin-top: 5px;
   font-weight: normal;
   font-size: 18px;
   margin-bottom: 30px;
 }
 
-.content button {
+.cover .content button {
   border: 0;
   background-color: #461E02;
   color: #EECC94;
@@ -194,6 +194,13 @@
   position: relative;
   z-index: 1;
   padding: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.page .content {
+  padding: 30px;
+  width: 100%;
 }
 
 .page::before {
@@ -205,7 +212,7 @@
   height: 100%;
   z-index: -1;
   background-color: #EECC94;
-  opacity: 0.3;
+  opacity: 0.1;
 }
 
 .page_border {
@@ -270,16 +277,94 @@
   width: 250px;
 }
 
-.page1 {
-  display: flex;
-  align-items: center;
-}
-
 .page1 p {
   color: #B35002;
   text-align: center;
   font-size: 18px;
   width: 100%;
-  padding: 30px;
   line-height: 140%;
+}
+
+.page2 p {
+  margin-bottom: 40px;
+  text-align: center;
+  color: #B35002;
+  font-size: 18px;
+}
+
+.page2 h2 {
+  margin: 40px 0;
+  text-align: center;
+  color: #B35002;
+  line-height: 100%;
+  font-size: 32px;
+  font-weight: normal;
+}
+
+.person_left {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.person_right {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  flex-direction: row-reverse;
+}
+
+.person_img {
+  width: 120px;
+  height: 140px;
+  position: relative;
+}
+
+.person_img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 20px;
+  border: 2px solid #EECC94;
+  box-shadow: 0 2px 4px #000;
+}
+
+.person_frame_left, .person_frame_right {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+}
+
+.person_frame_left {
+  bottom: 0;
+  left: 0;
+  transform: rotate(180deg);
+}
+
+.person_frame_left img {
+  position: absolute;
+  width: 80px;
+  max-width: unset;
+  right: -20px;
+  bottom: -20px;
+}
+
+.person_frame_right {
+  top: 0;
+  right: 0;
+}
+
+.person_frame_right img {
+  position: absolute;
+  width: 80px;
+  max-width: unset;
+  right: -20px;
+  bottom: -20px;
+}
+
+.person_data h1 {
+  color: #B35002;
+  font-size: 38px;
+  line-height: 100%;
+  font-weight: normal;
 }
