--- a/src/app/wedding/(floral)/(floral-2)/floral-2-preview/style.module.css
+++ b/src/app/wedding/(floral)/(floral-2)/floral-2-preview/style.module.css
@@ -201,6 +201,7 @@
 .page .content {
   padding: 30px;
   width: 100%;
+  position: relative;
 }
 
 .page::before {
@@ -221,6 +222,7 @@
   top: 30px;
   width: calc(100% - 60px);
   height: calc(100% - 60px);
+  pointer-events: none;
 }
 
 .page_border::after, .page_border::before {
@@ -231,6 +233,7 @@
   width: 100%;
   height: 100%;
   border: 1px solid #B35002;
+  pointer-events: none;
 }
 
 .page_border::after {
@@ -367,4 +370,63 @@
   font-size: 38px;
   line-height: 100%;
   font-weight: normal;
+}
+
+.page3 .content > h1 {
+  margin-bottom: 30px;
+  font-size: 18px;
+  text-align: center;
+  font-weight: normal;
+  color: #9C4200;
+}
+
+.events {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.event h1 {
+  margin-bottom: 10px;
+  color: #9C4200;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.event .action {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.event .action a {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  text-decoration: none;
+  color: #9C4200;
+  border-bottom: 1px solid #9C4200;
+}
+
+.event_detail {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-bottom: 15px;
+}
+
+.event_detail > div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.event_detail > div svg {
+  font-size: 14px;
+  color: #9C4200;
+}
+
+.event_detail > div span {
+  font-size: 18px;
+  color: #9C4200;
 }
