template 2 - add rsvp form

--- a/src/components/rsvp-form/rsvp-form.module.css
+++ b/src/components/rsvp-form/rsvp-form.module.css
@@ -1,12 +1,10 @@
-.form {
-  padding: 32px;
-}
+
 
 .form h1 {
   text-align: center;
   font-size: 28px;
   font-weight: normal;
-  color: #BC8A2E;
+  color: #000;
   margin-bottom: 28px;
 }
 
