--- a/src/app/wedding/(floral)/(floral-2)/floral-2-preview/style.module.css
+++ b/src/app/wedding/(floral)/(floral-2)/floral-2-preview/style.module.css
@@ -280,6 +280,11 @@
   width: 250px;
 }
 
+.page_flower_bottom {
+  position: absolute;
+  bottom: 0;
+}
+
 .page1 p {
   color: #B35002;
   text-align: center;
@@ -429,4 +434,21 @@
 .event_detail > div span {
   font-size: 18px;
   color: #9C4200;
+}
+
+.page4 h1 {
+  text-align: center;
+  color: #B35002;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 140%;
+  margin-bottom: 30px;
+}
+
+.page4 h2 {
+  text-align: center;
+  color: #B35002;
+  font-weight: normal;
+  font-size: 32px;
+  line-height: 100%;
 }
