--- a/src/app/wedding/(floral)/(floral-3)/floral-3-preview/style.module.css
+++ b/src/app/wedding/(floral)/(floral-3)/floral-3-preview/style.module.css
@@ -1,10 +1,10 @@
-.cover {
+.cover, .page1 {
   position: relative;
   overflow: hidden;
   width: 100%;
 }
 
-.cover > img {
+.cover > img, .page1 > img {
   position: absolute;
   display: block;
   max-width: unset;
@@ -46,7 +46,7 @@
   border-top-right-radius: 100px;
 }
 
-.cover .overlay {
+.overlay {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -129,4 +129,55 @@
 .name_container h2 {
   font-size: 16px;
   letter-spacing: 1px;
+}
+
+.preface {
+  background-image: linear-gradient(#3B634F, #669A80, #3B634F);
+  padding: 120px 20px;
+  width: 260px;
+  border-radius: 120px;
+}
+
+.gradient_border {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.gradient_border::before {
+  content: "";
+  position: absolute;
+  left: -5px;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  border-radius: 125px;
+  z-index: -1;
+  background: linear-gradient(#994A20, #F0BD60, #FFFFFF, #F0BD60, #994A20);
+}
+
+.gradient_border > img {
+  position: absolute;
+}
+
+.gradient_border .border_decoration_left {
+  width: 200px;
+  z-index: -2;
+  left: -60px;
+  top: -40px;
+}
+
+.gradient_border .border_decoration_right {
+  width: 200px;
+  z-index: -2;
+  right: -60px;
+  bottom: -40px;
+}
+
+.preface p {
+  color: #fff;
+  font-size: 18px;
+  line-height: 32px;
+  text-align: center;
 }
