create new template

--- a/src/app/(template)/globals.css
+++ b/src/app/(template)/globals.css
@@ -25,6 +25,10 @@ details summary {
   list-style: none;
 }
 
+.thumb {
+  vertical-align: middle;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
