--- a/src/app/(template)/(tasyukuran)/(customer)/chio/style.module.scss
+++ b/src/app/(template)/(tasyukuran)/(customer)/chio/style.module.scss
@@ -56,3 +56,14 @@
     transform: translateX(100%);
   }
 }
+
+.coverContent {
+  animation: show-in 3s ease 1s forwards;
+}
+
+@keyframes show-in {
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
