--- a/src/app/(order)/(wedding)/(template)/coral-blue/style.module.scss
+++ b/src/app/(order)/(wedding)/(template)/coral-blue/style.module.scss
@@ -9,3 +9,14 @@
   height: 120px;
   border-radius: 50%;
 }
+
+.animate_photo {
+  animation: animate-photo 2s ease forwards;
+}
+
+@keyframes animate-photo {
+  to {
+    opacity: 0.1;
+    transform: scale(1.4);
+  }
+}
