--- a/src/app/(order)/(wedding)/(template)/coral-blue/style.module.scss
+++ b/src/app/(order)/(wedding)/(template)/coral-blue/style.module.scss
@@ -2,6 +2,10 @@
   background-image: linear-gradient(#fff, #ffffff00);
 }
 
+.gradient2 {
+  background-image: radial-gradient(#DAC178, #DAC17800 70%);
+}
+
 .button {
   background-image: linear-gradient(90deg, #A38B45, #AF9B60, #D0B873, #AF9B60, #A38B45);
   border: 5px solid #AF9B60;
