--- a/src/components/new-rsvp-form/rsvp-form.module.css
+++ b/src/components/new-rsvp-form/rsvp-form.module.css
@@ -1,93 +1,92 @@
-
-
 .form h1 {
-  text-align: center;
-  font-size: 28px;
-  font-weight: normal;
-  color: #000;
-  margin-bottom: 28px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: #000;
+    margin-bottom: 28px;
 }
 
 .form form {
-  display: flex;
-  flex-direction: column;
-  gap: 18px;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
 }
 
 .form_field {
-  display: flex;
-  flex-direction: column;
-  gap: 4px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
 }
 
 .form_field label {
-  font-size: 12px;
+    font-size: 12px;
 }
 
-.form_field input[type="text"], .form_field textarea {
-  background-color: transparent;
-  border: none;
-  border-bottom: 1px solid #000;
-  font-size: 20px;
-  padding: 4px;
+.form_field input[type="text"],
+.form_field textarea {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #000;
+    font-size: 14px;
+    padding: 4px;
 }
 
 .form_field input[type="text"]::placeholder {
-  color: #cdcdcd;
+    color: #cdcdcd;
 }
 
 .form button {
-  background-color: #000;
-  color: #fff;
-  border: none;
-  padding: 14px;
-  font-size: 14px;
-  letter-spacing: 2px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    padding: 14px;
+    font-size: 14px;
+    letter-spacing: 2px;
 }
 
 .radio_container {
-  display: flex;
-  gap: 12px;
+    display: flex;
+    gap: 12px;
 }
 
 .radio {
-  position: relative;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  flex-basis: 60px;
-  flex-grow: 0;
-  flex-shrink: 0;
+    position: relative;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    flex-basis: 60px;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 .radio input[type="radio"] {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 .radio span {
-  background-color: transparent;
-  color: #000;
-  text-align: center;
-  display: block;
-  font-size: 18px;
-  border: 1px solid #000;
-  padding: 8px;
+    background-color: transparent;
+    color: #000;
+    text-align: center;
+    display: block;
+    font-size: 18px;
+    border: 1px solid #000;
+    padding: 8px;
 }
 
 .radio input[type="radio"]:checked ~ span {
-  color: #fff;
-  background-color: #000;
+    color: #fff;
+    background-color: #000;
 }
 
 .input_error {
-  color: #df4747;
-  font-style: italic;
-  font-size: 14px;
+    color: #df4747;
+    font-style: italic;
+    font-size: 14px;
 }
