--- a/src/app/(order)/(wedding)/(customer)/ayes-bertus/style.module.scss
+++ b/src/app/(order)/(wedding)/(customer)/ayes-bertus/style.module.scss
@@ -1,151 +1,158 @@
 .cover_left {
-  transition: transform 2s ease;
-  
-  &--open {
-    transform: translateX(-100%);
-  }
+    transition: transform 2s ease;
+
+    &--open {
+        transform: translateX(-100%);
+    }
 }
 
 .cover_right {
-  transition: transform 2s ease;
+    transition: transform 2s ease;
 
-  &--open {
-    transform: translateX(100%);
-  }
+    &--open {
+        transform: translateX(100%);
+    }
 }
 
 .cover_name {
-  transition: transform 2s ease, opacity 2s ease;
+    transition:
+        transform 2s ease,
+        opacity 2s ease;
 
-  &--open {
-    opacity: 0;
-    transform: translateY(100%);
-    pointer-events: none;
-  }
+    &--open {
+        opacity: 0;
+        transform: translateY(100%);
+        pointer-events: none;
+    }
 }
 
 .cover_logo {
-  transition: transform 2s ease, opacity 2s ease;
+    transition:
+        transform 2s ease,
+        opacity 2s ease;
 
-  &--open {
-    opacity: 0;
-    transform: translateY(-100%);
-  }
+    &--open {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
 }
 
 .button {
-  border: 1px solid #DAB96B;
-  color: #DAB96B;
-  padding: 8px 24px;
-  background-color: #662B32;
-  font-size: 14px;
-  transition: transform 0.35s ease;
-
-  &:active {
-    transform: translateY(4px);
+    border: 1px solid #dab96b;
+    color: #dab96b;
+    padding: 8px 24px;
+    background-color: #662b32;
+    font-size: 14px;
     transition: transform 0.35s ease;
-  }
+
+    &:active {
+        transform: translateY(4px);
+        transition: transform 0.35s ease;
+    }
 }
 
 .content {
-  opacity: 0;
-  animation: content-show 5s ease forwards 0.5s;
+    opacity: 0;
+    animation: content-show 5s ease forwards 0.5s;
 }
 
 .ornament {
-  & > img {
-    opacity: 0;
+    & > img {
+        opacity: 0;
 
-    &:nth-child(1) {
-      transform: translateY(100%);
-      animation: content-ornament-slide 5s ease forwards 0.5s;
-    }
+        &:nth-child(1) {
+            transform: translateY(100%);
+            animation: content-ornament-slide 5s ease forwards 0.5s;
+        }
 
-    &:nth-child(2) {
-      transform: translateY(100%);
-      animation: content-ornament-slide 3s ease forwards 1s;
-    }
+        &:nth-child(2) {
+            transform: translateY(100%);
+            animation: content-ornament-slide 3s ease forwards 1s;
+        }
 
-    &:nth-child(3) {
-      transform: translateY(100%);
-      animation: content-ornament-slide 2s ease forwards 1.5s;
-    }
+        &:nth-child(3) {
+            transform: translateY(100%);
+            animation: content-ornament-slide 2s ease forwards 1.5s;
+        }
 
-    &:nth-child(4) {
-      transform: translateY(100%);
-      animation: content-ornament-slide 2s ease forwards 2s;
-    }
+        &:nth-child(4) {
+            transform: translateY(100%);
+            animation: content-ornament-slide 2s ease forwards 2s;
+        }
 
-    &:nth-child(5) {
-      transform: translateY(100%);
-      animation: content-ornament-slide 1.5s ease forwards 2s;
-    }
+        &:nth-child(5) {
+            transform: translateY(100%);
+            animation: content-ornament-slide 1.5s ease forwards 2s;
+        }
 
-    &:nth-child(6) {
-      transform: translate(-50%, 100%);
-      animation: content-ornament-slide-up 3s ease forwards 3s;
+        &:nth-child(6) {
+            transform: translate(-50%, 100%);
+            animation: content-ornament-slide-up 3s ease forwards 3s;
+        }
     }
-  }
 }
 
 .text-shadow {
-  text-shadow: 2px 2px 2px #f0dfcf;
+    text-shadow: 2px 2px 2px #f0dfcf;
 }
 
 .person_image {
-  position: relative;
-  width: 200px;
-  height: 230px;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
+    position: relative;
+    width: 200px;
+    height: 320px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 .person_image_border {
-  position: absolute;
-  width: 120%;
-  max-width: unset;
-  left: 50%;
-  transform: translateX(-50%);
+    position: absolute;
+    width: 210px;
+    height: 330px;
+    border-radius: 120px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px solid #dab96b;
 }
 
 .person_image_groom {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 120px;
+    object-fit: cover;
 }
 
 @keyframes content-show {
-  from {
-    opacity: 0;
-  }
+    from {
+        opacity: 0;
+    }
 
-  to {
-    opacity: 1;
-  }
+    to {
+        opacity: 1;
+    }
 }
 
 @keyframes content-ornament-slide {
-  from {
-    opacity: 1;
-  }
+    from {
+        opacity: 1;
+    }
 
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 @keyframes content-ornament-slide-up {
-  from {
-    opacity: 1;
-  }
+    from {
+        opacity: 1;
+    }
 
-  to {
-    opacity: 1;
-    transform: translate(-50%, 0);
-  }
+    to {
+        opacity: 1;
+        transform: translate(-50%, 0);
+    }
 }
